# skeval

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  dangerfile.js  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  doc_improvement.md  feature_request.md
.github/automation/: ai-summary.yml
.github/workflows/: auto-assign.yml  ci-gate.yml  ci.yml  code-quality.yml  codeql.yml  danger.yml  data.yml  docs.yml  first-interaction.yml  labeler.yml  precommit.yml  release.yml  security.yml  stale.yml  tests.yml  toggle-ci.yml
docs/: api.rst  architecture.rst  changelog.rst  conf.py  contributing.rst  ecosystem.rst  index.rst  installation.rst  usage.rst
examples/: 01_quickstart.py  02_save_and_load.py  03_evaluation.py  04_custom_labels.py  05_load_from_file.py  06_gridsearchcv.py  07_skore.py
scripts/: evaluate_llm.py  train_model.py  verify.py
src/sentinel/: __init__.py  cli.py
src/sentinel/classifier/: __init__.py  sentence_classifier.py
src/sentinel/dataset/: __init__.py  loader.py
src/sentinel/evaluator/: evaluator.py
src/sentinel/metrics/: metrics.py
src/sentinel/utils/: __init__.py  helpers.py
src/skeval/: __init__.py  cli.py
src/skeval/classifier/: sentence_classifier.py
src/skeval/dataset/: loader.py
src/skeval/evaluator/: evaluator.py
src/skeval/metrics/: metrics.py
src/skeval/utils/: helpers.py
tests/: test_classifier.py  test_evaluator.py  test_loader.py  test_metrics.py
