[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeval"
version = "0.1.1"
description = "Semantic Evaluation Layer for LLMs — classify and evaluate sentence-level understanding."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "skeval Contributors" }]
requires-python = ">=3.9"
keywords = ["llm", "nlp", "evaluation", "classification", "semantics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.38.0,<5.0.0",
    "datasets>=2.18.0,<4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "vulture>=2.11",
    "pydocstyle>=6.3.0",
    "codespell>=2.3.0",
    "pre-commit>=3.7.0",
    "bandit>=1.7.8",
    "pip-audit>=2.7.0",
]
docs = [
    "sphinx>=7.3.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=3.0.0",
]

[project.scripts]
skeval = "skeval.cli:main"

[project.urls]
Homepage = "https://github.com/direkkakkar319-ops/Sentinel.AI"
Repository = "https://github.com/direkkakkar319-ops/Sentinel.AI.git"
Issues = "https://github.com/direkkakkar319-ops/Sentinel.AI/issues"

# ─── Tool Configuration ────────────────────────────────────────────────────────

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/skeval"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.bandit]
targets = ["src/"]
exclude_dirs = ["tests", "scripts"]
