[metadata]
name = skeval
version = 0.1.1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    skeval = skeval.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv
